--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+etcd v3.1.5 (2017-03-27)
+- add '/etc/nsswitch.conf' file to alpine-based Docker image
+- fix raft memory leak issue
+- fix Windows file path issues
+
+etcd v3.1.4 (2017-03-22)
+
 etcd v3.1.3 (2017-03-10)
 - use machine default host when advertise URLs are default
   values(localhost:2379,2380) AND if listen URL is 0.0.0.0
